updated category feature
